<resources>
    <string name="app_name">Text Memo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_memo">Add Memo</string>
    <string name="edit_details">Edit Details</string>
    <string name="hint_title">Title</string>
    <string name="hint_text">Enter your text here...</string>
    <string name="save_button">Save</string>
    <string name="update_text">update</string>
    <string name="update_memo_text">Update Memo</string>
    <string name="yes">Yes</string>
    <string name="confirmation_text">Delete Memo? This can\'t be undone.</string>
    <string name="no">no</string>
    <string name="delete_all">Delete All</string>
</resources>