<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="11dp"
        android:padding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:padding="15dp">

            <TextView
                android:id="@+id/confirm_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmation_text"
                android:layout_centerHorizontal="true"
                android:textSize="18sp" />

            <Button
                android:id="@+id/yes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:layout_marginTop="18dp"
                android:layout_marginStart="24dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/confirm_text"/>

            <Button
                android:id="@+id/no_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="24dp"
                android:layout_below="@+id/confirm_text"/>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>